Fix broken inspect

--- a/_custom.scss
+++ b/_custom.scss
@@ -64,6 +64,87 @@ body.home {
   width: 100%;
   height: initial;
 }
+
+body.maps {
+  overflow: hidden !important;
+  background: #f2f3f0;
+
+  #navbar-top {
+    background: url('/img/org-banner-bg.jpg');
+    background-position: top center;
+    background-repeat: repeat-x;
+  }
+
+  #banner-bg {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    height: 200px;
+    z-index: 99;
+    background: rgba(255, 255, 255, 0.8);
+    pointer-events: none;
+    min-width: 740px;
+    right: 33%;
+    @media screen and (max-width: 720px) {
+      right: 0;
+      min-width: auto;
+      height: 175px;
+    }
+
+    &.banner-bg-bigger {
+      height: 195px;
+    }
+  }
+
+  #banner {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    pointer-events: none;
+    padding: 15px 25px;
+
+    .container {
+      padding: 0 0 0 30px;
+    }
+
+    h1,
+    h2 {
+      color: #616161;
+      font-size: 34px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+
+    a {
+      pointer-events: all;
+    }
+    @media screen and (max-width: 720px) {
+      text-align: center;
+      padding: 10px 5px;
+
+      .container {
+        padding: 0;
+      }
+
+      h1 {
+        font-size: 20px;
+      }
+
+      h2 {
+        font-size: 16px;
+      }
+    }
+  }
+
+  .foot {
+    display: none;
+  }
+}
+
 .shorts, .shorts-lang {
   padding-top: 10px;
   z-index: 10;
